--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div class="partone">
+        <h1 style="color: gold;">sunday</h1>
+        <ul>
+            <li>shop</li>
+            <li>about us</li>
+            <li>the shop </li>
+            <li>let us</li>
+        </ul>
+        <div style="margin-right: 50px; border: 30px;">
+            <button>sing in</button>
+            <button style="background-color: gold; padding: 2px 3px; border: 0%;  margin-left: 10px;">get started</button>
+        </div>
+        
+    </div>
+
+    <div class="bgn">
+        <h1 style="color: white;">welcome to sunday</h1>
+        <button style="background-color: gold; padding: 2px 3px; border: 0%;  margin-left: 10px;">get started</button>
+
+    </div>
+
+
+    
     <div class="section">
 <div>
             <p class="small">OUR MISSION</p>
