--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="partone">
-        <h1 style="color: gold;">sunday</h1>
+        <h1 style="color: blueviolet;">sunday</h1>
         <ul>
             <li>shop</li>
             <li>about us</li>
